--- a/tensorboard/plugins/graph_edit/tf_graph_dashboard/tf-graph-dashboard.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_dashboard/tf-graph-dashboard.html
@@ -195,32 +195,6 @@ paper-dropdown-menu.save-model {
 </dom-module>
 
 <script>
-/**
- * The (string) name for the run of the selected dataset in the graph dashboard.
- */
-const RUN_STORAGE_KEY = 'run';
-
-/**
- * TODO(stephanwlee): Convert this to proper type when converting to TypeScript.
- * @typedef {{
- *   tag: ?string,
- *   displayName: string,
- *   conceptualGraph: boolean,
- *   opGraph: boolean,
- *   profile: boolean,
- * }}
- */
- const TagItem = {};
-
-/**
- * TODO(stephanwlee): Convert this to proper type when converting to TypeScript.
- * @typedef {{
- *   name: string,
- *   tags: !Array<!TagItem>,
- * }}
- */
-const RunItem = {};
-
 Polymer({
   is: 'tf-graph-dashboard',
   properties: {
@@ -308,7 +282,7 @@ Polymer({
       type: String,
       notify: true,
       value: tf_storage.getStringInitializer(
-          RUN_STORAGE_KEY, {
+        'run', {
             defaultValue: '',
             useLocalStorage: false,
           }),
@@ -387,7 +361,7 @@ Polymer({
     this._maybeFetchHealthPills();
   },
   _runObserver: tf_storage.getStringObserver(
-      RUN_STORAGE_KEY, {
+    'run', {
         defaultValue: '',
         polymerProperty: 'run',
         useLocalStorage: false,
