--- a/tensorboard/plugins/convert/tf_graph_dashboard/tf-graph-dashboard.html
+++ b/tensorboard/plugins/convert/tf_graph_dashboard/tf-graph-dashboard.html
@@ -329,7 +329,7 @@ Polymer({
       }),
   _fetchDataset() {
     return this._requestManager.request(
-        tf_backend.getRouter().pluginRoute('graphconvert', '/info'));
+        tf_backend.getRouter().pluginRoute('convert', '/info'));
   },
   /*
    * See also _maybeFetchHealthPills, _initiateNetworkRequestForHealthPills.
@@ -356,7 +356,7 @@ Polymer({
   },
   _graphUrl(run, limitAttrSize, largeAttrsKey) {
     return tf_backend.getRouter().pluginRoute(
-        'graphconvert',
+        'convert',
         '/graph',
         new URLSearchParams({
           'run': run,
