--- a/tensorboard/plugins/debug_db/tf_debugDB/tf-debugDB-minimap.html
+++ b/tensorboard/plugins/debug_db/tf_debugDB/tf-debugDB-minimap.html
@@ -17,9 +17,9 @@ limitations under the License.
 
 <link rel="import" href="../polymer/polymer.html">
 
-<script src="../tf-debugDB-common/minimap.js"></script>
+<script src="../tf-debugdb-common/minimap.js"></script>
 
-<dom-module id="tf-debugDB-minimap">
+<dom-module id="tf-debugdb-minimap">
 <template>
 <style>
 :host {
@@ -68,7 +68,7 @@ svg {
 </template>
 <script>
 Polymer({
-  is: 'tf-debugDB-minimap',
+  is: 'tf-debugdb-minimap',
 
   /**
    * Initializes the minimap and returns a minimap object to notify when
