--- a/tensorboard/plugins/debug_db/tf_debugDB_loader/tf-debugDB-dashboard-loader.html
+++ b/tensorboard/plugins/debug_db/tf_debugDB_loader/tf-debugDB-dashboard-loader.html
@@ -17,19 +17,19 @@ limitations under the License.
 
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../tf-backend/tf-backend.html">
-<link rel="import" href="../tf-debugDB-common/tf-debugDB-common.html">
+<link rel="import" href="../tf-debugdb-common/tf-debugdb-common.html">
 
 <!--
-Data loader for tf-debugDB-dashboard.
+Data loader for tf-debugdb-dashboard.
 
 The loader loads op graph, conceptual graphs, and RunMetadata associated with an
-op graph which is the major difference from the tf-debugDB-loader which is only
+op graph which is the major difference from the tf-debugdb-loader which is only
 capable of loading an op graph. Another difference is that the loader takes
-`selection` from the tf-debugDB-controls as an input as opposed to URL path of an
+`selection` from the tf-debugdb-controls as an input as opposed to URL path of an
 data endpoint.
 -->
-<dom-module id="tf-debugDB-dashboard-loader">
+<dom-module id="tf-debugdb-dashboard-loader">
 </dom-module>
 
-<script src="tf-debugDB-dashboard-loader.js"></script>
+<script src="tf-debugdb-dashboard-loader.js"></script>
 
