--- a/tensorboard/plugins/debug_db/tf_debugDB_loader/tf-debugDB-loader.html
+++ b/tensorboard/plugins/debug_db/tf_debugDB_loader/tf-debugDB-loader.html
@@ -16,11 +16,11 @@ limitations under the License.
 -->
 
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../tf-debugDB-common/tf-debugDB-common.html">
+<link rel="import" href="../tf-debugdb-common/tf-debugdb-common.html">
 
-<dom-module id="tf-debugDB-loader">
+<dom-module id="tf-debugdb-loader">
 </dom-module>
 
-<script src="tf-debugDB-loader.js"></script>
+<script src="tf-debugdb-loader.js"></script>
 
 
