--- a/tensorboard/plugins/debug_db/tf_debugDB_controls/tf-debugDB-controls.html
+++ b/tensorboard/plugins/debug_db/tf_debugDB_controls/tf-debugDB-controls.html
@@ -25,7 +25,7 @@ limitations under the License.
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
-<dom-module id="tf-debugDB-controls">
+<dom-module id="tf-debugdb-controls">
 <template>
 <style>
 .allcontrols {
@@ -240,4 +240,4 @@ paper-button.cancel-bt{
 </template>
 </dom-module>
 
-<script src="tf-debugDB-controls.js"></script>
+<script src="tf-debugdb-controls.js"></script>
