--- a/tensorboard/plugins/graph_edit/tf_graph_edit_dashboard/tf-graph-edit-dashboard.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit_dashboard/tf-graph-edit-dashboard.html
@@ -62,14 +62,23 @@ by default. The user can select a different run from a dropdown menu.
         </paper-menu>
       </paper-dropdown-menu>
     </div>
-    <paper-input class="path" label="File Type" value="{{fileType}}"></paper-input>
-    <template is="dom-if" if="[[_srcMode]]">
+    <div id="elsefile">
+      <paper-input class="path" label="File Type" value="{{fileType}}"></paper-input>
+    </div>
+    <!-- <template is="dom-if" if="[[_srcMode]]"> -->
+    <div id="torch" style="display: none">
+      <paper-input class="path" label="Input Tensor Size" value="{{inputTensorSize}}"></paper-input>
+    </div>
+    <div id="elsepath">
       <paper-input class="path" label="Source Path" value="{{srcPath}}"></paper-input>
-    </template>
-    <template is="dom-if" if="[[!_srcMode]]">
+    </div>
+    <!-- </template> -->
+    <!-- <template is="dom-if" if="[[_srcMode]]"> -->
+    <div id="c2" style="display: none">
       <paper-input class="path" label="Predict Net" value="{{predictNet}}"></paper-input>
       <paper-input class="path" label="Init Net" value="{{initNet}}"></paper-input>
-    </template>
+    </div>
+    <!-- </template> -->
     <paper-button class="icon-button" on-click="load" alt="">
       <iron-icon icon="create" class="button-icon"></iron-icon>
       <span class="button-text">Load graph from the server</span>
@@ -94,8 +103,6 @@ by default. The user can select a different run from a dropdown menu.
           selection="{{_selection}}"
           selected-file="{{_selectedFile}}"
           selected-node="{{_selectedNode}}"
-          health-pills-feature-enabled="[[_debuggerDataEnabled]]"
-          health-pills-toggled-on="{{healthPillsToggledOn}}"
           graph-hierarchy="[[_graphHierarchy]]"
           graph="[[_graph]]" 
           hierarchy-params="[[_hierarchyParams]]"
@@ -124,7 +131,6 @@ by default. The user can select a different run from a dropdown menu.
           graph="[[_graph]]"
           hierarchy-params="[[_hierarchyParams]]"
           progress="[[_progress]]"
-          debugger-data-enabled="[[_debuggerDataEnabled]]"
           are-health-pills-loading="[[_areHealthPillsLoading]]"
           debugger-numeric-alerts="[[_debuggerNumericAlerts]]"
           node-names-to-health-pills="[[_nodeNamesToHealthPills]]"
@@ -200,18 +206,19 @@ Polymer({
   properties: {
     _srcMode:{
       type: Number,
-      value: 2,
-      observer: '_selected'
+      value: 0,
+      observer: '_selectedModeChanged'
     },
     _srcTypes:{
       type: Array,
-      value: ['caffe2', 'caffe', 'onnx', 'torch', 'tf'],
+      value: ['onnx', 'caffe', 'caffe2', 'torch', 'tf'],
     },
     srcPath: String,
     srcType: String,
     predictNet: String,
     initNet: String,
     fileType: String,
+    inputTensorSize: String,
     /**
      * @type {!Array<!RunItem>}
      */
@@ -224,26 +231,13 @@ Polymer({
       value: 0,
     },
     _datasets: Array,
-    _renderHierarchy: {type: Object, observer: '_renderHierarchyChanged'},
-    _requestManager: {
-      type: Object,
-      value: () => new tf_backend.RequestManager(),
-    },
-    _canceller: {
-      type: Object,
-      value: () => new tf_backend.Canceller(),
-    },
-    _debuggerDataEnabled: Boolean,
     allStepsModeEnabled: Boolean,
     specificHealthPillStep: {type: Number, value: 0},
-    healthPillsToggledOn: {type: Boolean, value: true, observer: '_healthPillsToggledOnChanged'},
     selectedNode: {
       type: String,
       notify: true,
     },
     _isAttached: Boolean,
-    // Whether this dashboard is initialized. This dashboard should only be initialized once.
-    _initialized: Boolean,
     // Whether health pills are currently being loaded, in which case we may want to say show a
     // spinner.
     _areHealthPillsLoading: Boolean,
@@ -260,34 +254,6 @@ Polymer({
       value: {},
     },
     _healthPillStepIndex: Number,
-    // A strictly increasing ID. Each request for health pills has a unique ID. This helps us
-    // identify stale requests.
-    _healthPillRequestId: {type: Number, value: 1},
-    /**
-     * The setTimeout ID for the pending request for health pills at a
-     * specific step.
-     *
-     * @type {number?}
-     */
-    _healthPillStepRequestTimerId: Number,
-    // The request for health pills at a specific step (as opposed to all sampled health pills) may
-    // involve slow disk reads. Hence, we throttle to 1 of those requests every this many ms.
-    _healthPillStepRequestTimerDelay: {
-      type: Number,
-      value: 500,
-      readOnly: true,
-    },
-    runs: Array,
-    run: {
-      type: String,
-      notify: true,
-      value: tf_storage.getStringInitializer(
-        'run', {
-            defaultValue: '',
-            useLocalStorage: false,
-          }),
-      observer: '_runObserver',
-    },
     _selection: {
       type: Object,
     },
@@ -298,32 +264,29 @@ Polymer({
     },
     loadparams:Object,
   },
-  listeners: {
-    'node-toggle-expand': '_handleNodeToggleExpand',
-  },
-  observers: [
-    '_maybeFetchHealthPills(_debuggerDataEnabled, allStepsModeEnabled, ' +
-        'specificHealthPillStep, _selectedNode)',
-    '_maybeInitializeDashboard(_isAttached)',
-    '_determineSelectedDataset(_datasets, run)',
-    '_updateSelectedDatasetName(_datasets, _selectedDataset)',
-  ],
+  listeners: {},
+  observers: [],
   load: function(){
     var data = {}
-    if(this._srcMode == 0){
+    if(this._srcMode == 2){
       data.fileType = this.fileType
       data.predictNet = this.predictNet
       data.initNet = this.initNet
       data.modelType = this._srcTypes[this._srcMode]
     }
     else{
-      data.fileType = this.fileType
-      data.modelType = this._srcTypes[this._srcMode]
-      data.srcPath = this.srcPath
+      if(this._srcMode == 3){
+        data.inputTensorSize = this.inputTensorSize
+        data.modelType = this._srcTypes[this._srcMode]
+        data.srcPath = this.srcPath
+      }
+      else{
+        data.fileType = this.fileType
+        data.modelType = this._srcTypes[this._srcMode]
+        data.srcPath = this.srcPath
+      }
     }
     
-    // const url = tf_backend.getRouter().pluginRoute('graphedit', '/load')
-    // this._requestManager.request(url);
     this.dataSource = 2
     this.loadparams = data
     this.init = true
@@ -338,252 +301,28 @@ Polymer({
   detached: function() {
     this.set('_isAttached', false);
   },
-  reload: function() {
-    if (!this._debuggerDataEnabled) {
-      // Check if the debugger plugin is enabled now.
-      this._requestManager
-          .request(tf_backend.getRouter().pluginsListing())
-          .then(this._canceller.cancellable(result => {
-            if (result.cancelled) {
-              return;
-            }
-
-            if (result.value['debugger']) {
-              // The debugger plugin is enabled. Request debugger-related
-              // data. Perhaps the debugger plugin had been disabled
-              // beforehand because no bad values (NaN, -/+ Inf) had been
-              // found and muted_if_healthy had been on.
-              this.set('_debuggerDataEnabled', true);
-            }
-          }));
-    }
-
-    this._maybeFetchHealthPills();
-  },
-  _runObserver: tf_storage.getStringObserver(
-    'run', {
-        defaultValue: '',
-        polymerProperty: 'run',
-        useLocalStorage: false,
-      }),
-  _fetchDataset() {
-    return this._requestManager.request(
-        tf_backend.getRouter().pluginRoute('graphedit', '/info'));
-  },
-  /*
-   * See also _maybeFetchHealthPills, _initiateNetworkRequestForHealthPills.
-   * This function returns a promise with the raw health pill data.
-   */
-  _fetchHealthPills(nodeNames, step) {
-    const postData = {
-      'node_names': JSON.stringify(nodeNames),
-
-      // Events files with debugger data fall under this special run.
-      'run': '__debugger_data__',
-    };
-    if (step !== undefined) {
-      // The user requested health pills for a specific step. This request
-      // might be slow since the backend reads events sequentially from disk.
-      postData['step'] = step;
-    }
-    const url = tf_backend.getRouter().pluginRoute('debugger', '/health_pills');
-    return this._requestManager.request(url, postData);
-  },
-  _fetchDebuggerNumericsAlerts() {
-    return this._requestManager.request(
-        tf_backend.getRouter().pluginRoute('debugger', '/numerics_alert_report'));
-  },
-  _graphUrl(run, limitAttrSize, largeAttrsKey) {
-    return tf_backend.getRouter().pluginRoute(
-        'graphedit',
-        '/graph',
-        new URLSearchParams({
-          'run': run,
-          'limit_attr_size': limitAttrSize,
-          'large_attrs_key': largeAttrsKey,
-        }),
-    );
-  },
-  _shouldRequestHealthPills: function() {
-    // Do not load debugger data if the feature is disabled, if the user toggled off the feature,
-    // or if the graph itself has not loaded yet. We need the graph to load so that we know which
-    // nodes to request health pills for.
-    return this._debuggerDataEnabled &&
-        this.healthPillsToggledOn &&
-        this._renderHierarchy &&
-        !this._datasetsEmpty(this._datasets);
-  },
-  _maybeInitializeDashboard: function(isAttached) {
-    if (this._initialized || !isAttached) {
-      // Either this dashboard is already initialized ... or we are not yet ready to initialize.
-      return;
-    }
-
-    this.set('_compatibilityProvider', new tf.graph.op.TpuCompatibilityProvider());
-
-    // Set this to true so we only initialize once.
-    this._initialized = true;
-    this._fetchDataset().then(dataset => {
-      const runNames = Object.keys(dataset);
-      // Transform raw data into UI friendly data.
-      this._datasets = runNames.sort(vz_sorting.compareTagNames).map(runName => {
-        const runData = dataset[runName];
-
-        const tagNames = Object.keys(runData.tags).sort(vz_sorting.compareTagNames);
-        const tags = tagNames
-            .map(name => runData.tags[name])
-            .map(({tag, conceptual_graph, op_graph, profile}) => ({
-              tag,
-              displayName: tag,
-              conceptualGraph: conceptual_graph,
-              opGraph: op_graph,
-              profile,
-            }));
-
-        // Translate a run-wide GraphDef into specially named (without a tag) op graph
-        // to abstract the difference between run_graph vs. op_graph from other
-        // components.
-        const tagsWithV1Graph = runData.run_graph ?
-            [
-                {
-                  tag: null,
-                  displayName: 'Default',
-                  conceptualGraph: false,
-                  opGraph: true,
-                  profile: false,
-                },
-                ...tags,
-            ] : tags;
-
-        return {name: runName, tags: tagsWithV1Graph};
-      });
-    });
-  },
-  _determineSelectedDataset(datasets, run) {
-    // By default, load the first dataset.
-    if (!run) {
-      // By default, load the first dataset.
-      this.set('_selectedDataset', 0);
-      return;
-    }
-
-    // If the URL specifies a dataset, load it.
-    const dataset = datasets.findIndex(d => d.name === run);
-    if (dataset === -1) {
-      // Tell the user if the dataset cannot be found to avoid misleading
-      // the user.
-      const dialog = this.$$('#error-dialog');
-      dialog.textContent =
-          `No dataset named "${run}" could be found.`;
-      dialog.open();
-      return;
-    }
-
-    this.set('_selectedDataset', dataset);
-  },
-  _updateSelectedDatasetName(datasets, selectedDataset) {
-    // Cannot update `run` to update the hash in case datasets for graph is empty.
-    if (datasets.length <= selectedDataset) return;
-    this.set('run', datasets[selectedDataset].name);
-  },
-  _requestHealthPills: function() {
-    this.set('_areHealthPillsLoading', true);
-    var requestId = ++this._healthPillRequestId;
-
-    if (this._healthPillStepRequestTimerId !== null) {
-      // A request for health pills is already scheduled to be initiated. Clear it, and schedule a
-      // new request.
-      window.clearTimeout(this._healthPillStepRequestTimerId);
-      this._healthPillStepRequestTimerId = null;
-    }
-
-    if (this.allStepsModeEnabled) {
-      // This path may be slow. Schedule network requests to start some time later. If another
-      // request is scheduled in the mean time, drop this current request.
-      this._healthPillStepRequestTimerId = setTimeout(function() {
-        this._healthPillStepRequestTimerId = null;
-        this._initiateNetworkRequestForHealthPills(requestId);
-      }.bind(this), this._healthPillStepRequestTimerDelay);
-    } else {
-      // The user is fetching sampled steps. This path is fast, so no need to throttle. Directly
-      // fetch the health pills across the network.
-      this._initiateNetworkRequestForHealthPills(requestId);
-    }
-  },
-  // Initiates the network request for health pills. Do not directly call this method - network
-  // requests may be throttled. Instead, call _requestHealthPills, which uses this method.
-  _initiateNetworkRequestForHealthPills: function(requestId) {
-    if (this._healthPillRequestId !== requestId) {
-      // This possibly scheduled request was outdated before it was even sent across the network. Do
-      // not bother initiating it.
-      return;
-    }
-
-    const specificStep =
-      this.allStepsModeEnabled ? this.specificHealthPillStep : undefined;
-
-    const healthPillsPromise = this._fetchHealthPills(
-        this._renderHierarchy.getNamesOfRenderedOps(), specificStep);
-    const alertsPromise = this._fetchDebuggerNumericsAlerts();
-
-    Promise.all([healthPillsPromise, alertsPromise]).then(
-        function(result) {
-      var healthPillsResult = result[0];
-      var alertsResult = result[1];
-
-      if (!this.healthPillsToggledOn) {
-        // The user has opted to hide health pills via the toggle button.
-        return;
+  _selectedModeChanged: function() {
+    if(document.getElementById('c2')){
+      if(this._srcMode == 2){//c2
+        document.getElementById('elsefile').style.display = ''
+        document.getElementById('elsepath').style.display = 'none'
+        document.getElementById('torch').style.display = 'none'
+        document.getElementById('c2').style.display = ''
+        return 
       }
-
-      if (requestId !== this._healthPillRequestId) {
-        // This response is no longer relevant.
-        return;
+      if(this._srcMode == 3){//torch
+        document.getElementById('elsefile').style.display = 'none'
+        document.getElementById('elsepath').style.display = ''
+        document.getElementById('torch').style.display = ''
+        document.getElementById('c2').style.display = 'none'
+        return 
       }
-
-      // Set the index for which step to show for the health pills. By default, show the last step.
-      // A precondition we assume (that Tensorboard's reservoir sampling guarantees) is that all
-      // node names should be mapped to the same number of steps.
-      for (var nodeName in healthPillsResult) {
-        this.set('_healthPillStepIndex', healthPillsResult[nodeName].length - 1);
-        break;
-      }
-
-      this.set('_debuggerNumericAlerts', alertsResult);
-      this.set('_nodeNamesToHealthPills', healthPillsResult);
-      this.set('_areHealthPillsLoading', false);
-      this.set('_healthPillStepRequestTimerId', null);
-    }.bind(this));
-  },
-  _datasetsEmpty: function(datasets) {
-    return !datasets || !datasets.length;
-  },
-  _renderHierarchyChanged: function(renderHierarchy) {
-    // Reload any data on the graph when the render hierarchy (which determines which nodes are
-    // rendered) changes.
-    this.reload();
-  },
-  _handleNodeToggleExpand: function() {
-    // Nodes were toggled. We may need to request health pills for more nodes.
-    this._maybeFetchHealthPills();
-  },
-  _healthPillsToggledOnChanged: function(healthPillsToggledOn) {// TODO:first
-    if (healthPillsToggledOn) {
-      // Load health pills.
-      this.reload();
-    } else {
-      // Remove all health pills by setting an empty mapping.
-      this.set('_nodeNamesToHealthPills', {});
+      document.getElementById('elsefile').style.display = ''
+      document.getElementById('elsepath').style.display = ''
+      document.getElementById('torch').style.display = 'none'
+      document.getElementById('c2').style.display = 'none'
     }
-  },
-  // Fetch health pills for a specific step if applicable.
-  _maybeFetchHealthPills: function() {
-    if (!this._shouldRequestHealthPills()) {
-      return;
-    }
-
-    this._requestHealthPills();
-  },
+  }
 });
 
 </script>
