fix bug .ts confusion

--- a/tensorboard/plugins/graph_edit/tf_graph_edit/tf-graph-edit-scene.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit/tf-graph-edit-scene.html
@@ -677,7 +677,7 @@ Polymer({
       type: String,
       observer: '_selectedNodeChanged'
     },
-    // An optional callback that implements the tf.graph.edge.EdgeSelectionCallback signature. If
+    // An optional callback that implements the tf.graph.edit.edge.EdgeSelectionCallback signature. If
     // provided, edges are selectable, and this callback is run when an edge is selected.
     handleEdgeSelected: Object,
     /** Keeps track of if the graph has been zoomed/panned since loading */
@@ -712,7 +712,7 @@ Polymer({
     /**
      * Scale mapping from template name to a number between 0 and N-1
      * where N is the number of different template names. Used by
-     * tf.graph.scene.node when computing node color by structure.
+     * tf.graph.edit.scene.node when computing node color by structure.
      * This property is a d3.scale.ordinal object.
      */
     templateIndex: Function,
@@ -778,7 +778,7 @@ Polymer({
     // An array of ContextMenuItem objects. Items that appear in the context
     // menu for a node.
     nodeContextMenuItems: Array,
-    // A mapping between node name to the tf.graph.scene.HealthPill to render.
+    // A mapping between node name to the tf.graph.edit.scene.HealthPill to render.
     nodeNamesToHealthPills: Object,
     // The step of health pills to show throughout the graph.
     healthPillStepIndex: Number,
@@ -806,7 +806,7 @@ Polymer({
    * @param nodeName {string} The name of the node to pan to.
    */
   panToNode(nodeName) {
-    const zoomed = tf.graph.scene.panToNode(
+    const zoomed = tf.graph.edit.scene.panToNode(
         nodeName, this.$.svg, this.$.root, this._zoom);
     if (zoomed) {
       this._zoomed = true;
@@ -831,22 +831,22 @@ Polymer({
   /** Main method for building the scene TODO:*/
   _build: function(renderHierarchy) {
     this.templateIndex = renderHierarchy.hierarchy.getTemplateIndex();
-    tf.graph.util.time('tf-graph-edit-scene (layout):', function() {
+    tf.graph.edit.util.time('tf-graph-edit-scene (layout):', function() {
       // layout the scene for this meta / series node
-      tf.graph.layout.layoutScene(renderHierarchy.root, this);
+      tf.graph.edit.layout.layoutScene(renderHierarchy.root, this);
     }.bind(this));
 
-    tf.graph.util.time('tf-graph-edit-scene (build scene):', function() {
-      tf.graph.scene.buildGroup(d3.select(this.$.root), renderHierarchy.root, this);
-      tf.graph.scene.addGraphClickListener(this.$.svg, this);
-      // tf.graph.scene.node.traceInputs(renderHierarchy);
+    tf.graph.edit.util.time('tf-graph-edit-scene (build scene):', function() {
+      tf.graph.edit.scene.buildGroup(d3.select(this.$.root), renderHierarchy.root, this);
+      tf.graph.edit.scene.addGraphClickListener(this.$.svg, this);
+      // tf.graph.edit.scene.node.traceInputs(renderHierarchy);
     }.bind(this));
     // Update the minimap again when the graph is done animating.
     setTimeout(function() {
       this._updateHealthPills(this.nodeNamesToHealthPills, this.healthPillStepIndex);
       d3.select('#minimap').style('display', 'none');
       this.minimap.update();
-    }.bind(this), tf.graph.layout.PARAMS.animation.duration);
+    }.bind(this), tf.graph.edit.layout.PARAMS.animation.duration);
   },
   ready: function() {
     this._zoom = d3.zoom()
@@ -898,8 +898,8 @@ Polymer({
     }.bind(this));
     // Initialize the minimap.
     this.minimap = this.$.minimap.init(this.$.svg, this.$.root, this._zoom,
-        tf.graph.layout.PARAMS.minimap.size,
-        tf.graph.layout.PARAMS.subscene.meta.labelHeight);
+        tf.graph.edit.layout.PARAMS.minimap.size,
+        tf.graph.edit.layout.PARAMS.subscene.meta.labelHeight);
   },
   attached: function() {
     this.set('_isAttached', true);
@@ -921,7 +921,7 @@ Polymer({
     }
 
     // Fit to screen after the graph is done animating.
-    setTimeout(this.fit.bind(this), tf.graph.layout.PARAMS.animation.duration);
+    setTimeout(this.fit.bind(this), tf.graph.edit.layout.PARAMS.animation.duration);
   },
   _updateLabels: function(showLabels) {
     var mainGraphTitleElement = this.getElementsByClassName('title')[0];
@@ -930,15 +930,15 @@ Polymer({
     var auxTitleStyle = auxTitleElement.style;
     var functionLibraryTitleStyle =
         this.getElementsByClassName('functionLibraryTitle')[0].style;
-    var core = d3.select("." + tf.graph.scene.Class.Scene.GROUP + ">." +
-      tf.graph.scene.Class.Scene.CORE).node();
+    var core = d3.select("." + tf.graph.edit.scene.Class.Scene.GROUP + ">." +
+      tf.graph.edit.scene.Class.Scene.CORE).node();
     // Only show labels if the graph is fully loaded.
     if (showLabels && core && this.progress && this.progress.value === 100) {
       var aux =
-        d3.select("." + tf.graph.scene.Class.Scene.GROUP + ">." +
-          tf.graph.scene.Class.Scene.INEXTRACT).node() ||
-        d3.select("." + tf.graph.scene.Class.Scene.GROUP + ">." +
-          tf.graph.scene.Class.Scene.OUTEXTRACT).node();
+        d3.select("." + tf.graph.edit.scene.Class.Scene.GROUP + ">." +
+          tf.graph.edit.scene.Class.Scene.INEXTRACT).node() ||
+        d3.select("." + tf.graph.edit.scene.Class.Scene.GROUP + ">." +
+          tf.graph.edit.scene.Class.Scene.OUTEXTRACT).node();
       var coreX = core.getCTM().e;
       var auxX = aux ? aux.getCTM().e : null;
       titleStyle.display = 'inline';
@@ -957,8 +957,8 @@ Polymer({
       }
 
       let functionLibrary = d3.select(
-          "." + tf.graph.scene.Class.Scene.GROUP + ">." +
-              tf.graph.scene.Class.Scene.FUNCTION_LIBRARY).node();
+          "." + tf.graph.edit.scene.Class.Scene.GROUP + ">." +
+              tf.graph.edit.scene.Class.Scene.FUNCTION_LIBRARY).node();
       let functionLibraryX =
           functionLibrary ? functionLibrary.getCTM().e : null;
       if (functionLibraryX !== null && functionLibraryX !== auxX) {
@@ -996,7 +996,7 @@ Polymer({
   // },
   fit: function() {
     this._hasRenderHierarchyBeenFitOnce = true;
-    tf.graph.scene.fit(this.$.svg, this.$.root, this._zoom, function() {
+    tf.graph.edit.scene.fit(this.$.svg, this.$.root, this._zoom, function() {
       this._zoomed = false;
     }.bind(this));
   },
@@ -1033,7 +1033,7 @@ Polymer({
     return this._edgeGroupIndex[e];
   },
   _updateHealthPills: function(nodeNamesToHealthPills, healthPillStepIndex) {
-    tf.graph.scene.addHealthPills(
+    tf.graph.edit.scene.addHealthPills(
         this.$.svg, nodeNamesToHealthPills, healthPillStepIndex);
   },
   /**
@@ -1047,28 +1047,28 @@ Polymer({
     }
     var nodeGroup = this.getNodeGroup(n);
     if (nodeGroup) {
-      tf.graph.scene.node.stylize(nodeGroup, node, this);
+      tf.graph.edit.scene.node.stylize(nodeGroup, node, this);
     }
 
-    if (node.node.type === tf.graph.NodeType.META &&
+    if (node.node.type === tf.graph.edit.NodeType.META &&
         node.node.associatedFunction &&
         !node.isLibraryFunction) {
       // The node is that of a function call. Also link the node within the
       // function library. This clarifies to the user that the library function
       // is being used.
-      var libraryFunctionNodeName = tf.graph.FUNCTION_LIBRARY_NODE_PREFIX +
+      var libraryFunctionNodeName = tf.graph.edit.FUNCTION_LIBRARY_NODE_PREFIX +
           node.node.associatedFunction;
       var functionGroup = d3.select(
-          '.' + tf.graph.scene.Class.Scene.GROUP + '>.' +
-          tf.graph.scene.Class.Scene.FUNCTION_LIBRARY + ' g[data-name="' +
+          '.' + tf.graph.edit.scene.Class.Scene.GROUP + '>.' +
+          tf.graph.edit.scene.Class.Scene.FUNCTION_LIBRARY + ' g[data-name="' +
           libraryFunctionNodeName + '"]');
-      tf.graph.scene.node.stylize(functionGroup, node, this);
+      tf.graph.edit.scene.node.stylize(functionGroup, node, this);
     }
 
     var annotationGroupIndex = this.getAnnotationGroupsIndex(n);
     _.each(annotationGroupIndex, (aGroup, hostName) => {
-      tf.graph.scene.node.stylize(aGroup, node, this,
-          tf.graph.scene.Class.Annotation.NODE);
+      tf.graph.edit.scene.node.stylize(aGroup, node, this,
+          tf.graph.edit.scene.Class.Annotation.NODE);
     });
   },
 
@@ -1088,7 +1088,7 @@ Polymer({
       this._updateNodeState(oldSelectedNode);
     }
 
-    // tf.graph.scene.node.traceInputs(this.renderHierarchy);
+    // tf.graph.edit.scene.node.traceInputs(this.renderHierarchy);
 
     if (!selectedNode) {
       return;
@@ -1102,7 +1102,7 @@ Polymer({
     var nodeParents = [];
     // Create list of all metanode parents of the selected node.
     while (node.parentNode != null
-        && node.parentNode.name != tf.graph.ROOT_NAME) {
+        && node.parentNode.name != tf.graph.edit.ROOT_NAME) {
       node = node.parentNode;
       nodeParents.push(node.name);
     }
@@ -1133,7 +1133,7 @@ Polymer({
     // Otherwise, the pan will be computed from incorrect measurements.
     setTimeout(() => {
       this.panToNode(selectedNode);
-    }, tf.graph.layout.PARAMS.animation.duration);
+    }, tf.graph.edit.layout.PARAMS.animation.duration);
   },
   _highlightedNodeChanged: function(highlightedNode, oldHighlightedNode) {
     if (highlightedNode === oldHighlightedNode) {
