--- a/tensorboard/plugins/graph_edit/tf_graph_edit_dashboard/tf-graph-edit-dashboard.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit_dashboard/tf-graph-edit-dashboard.html
@@ -234,7 +234,7 @@ Polymer({
     _compatibilityProvider: Object,
     _hierarchyParams: {
       type: Object,
-      value: () => tf.graph.hierarchy.DefaultHierarchyParams,
+      value: () => tf.graph.edit.hierarchy.DefaultHierarchyParams,
     },
     loadparams:Object,
   },
