--- a/tensorboard/plugins/graph_edit/tf_graph_edit_board/tf-graph-edit-board.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit_board/tf-graph-edit-board.html
@@ -187,7 +187,7 @@ Polymer({
       type: Array,
       notify: true,
     },
-    // A mapping between node name to the tf.graph.scene.HealthPill to render.
+    // A mapping between node name to the tf.graph.edit.scene.HealthPill to render.
     nodeNamesToHealthPills: Object,
     // Whether the user can request health pills for individual steps from the server. This can be
     // slow compared the default of showing sampled health pills.
@@ -227,7 +227,7 @@ Polymer({
     // An optional function that computes the label for an edge. Should
     // implement the EdgeLabelFunction signature.
     edgeLabelFunction: Object,
-    // An optional callback that implements the tf.graph.edge.EdgeSelectionCallback signature. If
+    // An optional callback that implements the tf.graph.edit.edge.EdgeSelectionCallback signature. If
     // provided, edges are selectable, and this callback is run when an edge is selected.
     handleEdgeSelected: Object,
   },
@@ -254,7 +254,7 @@ Polymer({
   _updateNodeInclude: function(nodeName) {
     var node = this.graphHierarchy.node(nodeName);
     this.set("_selectedNodeInclude",
-      node ? node.include : tf.graph.InclusionType.UNSPECIFIED);
+      node ? node.include : tf.graph.edit.InclusionType.UNSPECIFIED);
   },
   _nodeToggleExtract: function() {
     this._updateNodeInclude(this.selectedNode);
